bubba-backend (1.2.4.47) claire estelle; urgency=low

  * missing comma 

 -- Carl Fürstenberg <carl@excito.com>  Sun, 07 Feb 2010 18:50:40 +0100

bubba-backend (1.2.4.46) claire estelle; urgency=low

  * restore 

 -- Carl Fürstenberg <carl@excito.com>  Sun, 07 Feb 2010 18:39:00 +0100

bubba-backend (1.2.4.45) claire estelle; urgency=emergency

  * sheck for scalar of array for old backups (Closes: #1156) 

 -- Carl Fürstenberg <carl@excito.com>  Sun, 07 Feb 2010 17:07:53 +0100

bubba-backend (1.2.4.44) claire estelle; urgency=low

  * return 0 instead of 1 from restore_backup 

 -- Carl Fürstenberg <carl@excito.com>  Sun, 07 Feb 2010 16:56:30 +0100

bubba-backend (1.2.4.43) claire estelle; urgency=low

  * Move initialization of mediatomb to start at 26 instead of 20 (Closes:
    #1141) 

 -- Carl Fürstenberg <carl@excito.com>  Sun, 07 Feb 2010 12:35:40 +0100

bubba-backend (1.2.4.42) claire estelle; urgency=low

  [ Carl Fürstenberg ]
  * Old wizard created localtime to utilize TAI instead of UTC (Closes: #1087) 
  * diverting samba dhclient script from enter hook to exit hook (Closes:
	#1053) 

  [ PA Nilsson ]
  * Added ifup rc2.d link to backup.

 -- Carl Fürstenberg <carl@excito.com>  Sat, 06 Feb 2010 16:14:47 +0100

bubba-backend (1.2.4.41) claire estelle; urgency=low

  [ PA Nilsson ]
  * Updated to allow access from @LOCAL. (Closes: #1142)

 -- Carl Fürstenberg <carl@excito.com>  Sat, 06 Feb 2010 14:34:40 +0100

bubba-backend (1.2.4.40) claire estelle; urgency=low

  * adding --create-home to resture backup user 

 -- Carl Fürstenberg <carl@excito.com>  Fri, 05 Feb 2010 20:44:53 +0100

bubba-backend (1.2.4.39) estelle claire; urgency=low

  * removing MDADM from personal-settings-file 

 -- Carl Fürstenberg <carl@excito.com>  Fri, 05 Feb 2010 10:21:55 +0100

bubba-backend (1.2.4.38) estelle claire; urgency=low

  * Fixed setting workgroup.

 -- PA Nilsson <pa@excito.com>  Thu, 04 Feb 2010 14:49:35 +0100
