@@ -1,3 +1,9 @@
+bubba-backend (1.2.4.48) claire estelle; urgency=low
+
+  * resolve long lived bug in the new "old" config restore code 
+
+ -- Carl Fürstenberg <carl@excito.com>  Mon, 08 Feb 2010 12:38:17 +0100
+
 bubba-backend (1.2.4.47) claire estelle; urgency=low
 
   * missing comma 
